// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details reducer should set the available 1`] = `
Object {
  "available": 20,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the currency symbol 1`] = `
Object {
  "available": 0,
  "currencySymbol": "$",
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has been created 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": true,
  "hasChanges": false,
  "isLoading": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the has changes 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": true,
  "isLoading": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the is loading 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": true,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the provider 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "provider": "provider",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the sold 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "provider": "",
  "sold": 20,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 0,
}
`;

exports[`Details reducer should set the ticket id 1`] = `
Object {
  "available": 0,
  "currencySymbol": undefined,
  "details": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "hasBeenCreated": false,
  "hasChanges": false,
  "isLoading": false,
  "provider": "",
  "sold": 0,
  "tempDetails": Object {
    "capacity": "",
    "capacityType": "capped",
    "description": "",
    "endDate": "July 22, 2018",
    "endDateMoment": "2018-07-19T19:30:00.000Z",
    "endTime": "19:30",
    "price": "",
    "sku": "",
    "startDate": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30",
    "title": "",
  },
  "ticketId": 1094,
}
`;
